--- a/barchart.html
+++ b/barchart.html
@@ -23,7 +23,9 @@
 <body>
 
   <!-- Contenedor de gráfica -->
-  <div id="bar-chart"></div>
+  <div id="bar-chart">
+    <svg></svg>
+  </div>
 
   <div class="svgLegend4">
     <div class="legend4"></div>
@@ -34,6 +36,8 @@
 
   <!-- d3 Chart -->
   <script src="js/d3.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/nvd3/1.1.15-beta/nv.d3.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.css">
 
   <!-- Custom JS -->
   <script src="js/barchart.js"></script>
